# ceres-markov-fauna

./: .gitignore  Cargo.toml  README.md  application.yaml  config.json  markov.json  workflow.bpmn
src/: main.rs
src/commands/: echo.rs  generate.rs  hello.rs  help.rs  mod.rs  reset_table.rs  track_messages.rs  version.rs  word.rs  word_count.rs
src/core/: data.rs  db_client.rs  logging.rs  message_handler.rs  mod.rs  text_handler.rs
src/discord/: answers.rs  commands.rs  commands_old.rs  event_handler.rs  message_handler.rs  mod.rs
src/discord/commands/: hello.rs
src/errors/: db_error.rs  framework_error.rs  mod.rs
src/markov/: mod.rs
src/storage/: app_properties_model.rs  db_client.rs  db_model.rs  guild_config_model.rs  guild_markov_model.rs  json_model.rs  mod.rs  srv_config_model.rs
src/utils/: commands_util.rs  file_utils.rs  mod.rs  punctuation_utils.rs
