[package]
name = "ceres-markov-fauna"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serenity = {default-features =  false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.12.4"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
