[package]
name = "ceres-markov-fauna"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serenity = {default-features =  false, features = ["client", "gateway", "model", "rustls_backend", "framework", "standard_framework"], version = "0.12.4" }
poise = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
serde_yaml = "0.9.34"
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"
rand = "0.8.5"
rusqlite = { version = "0.36.0", features = ["bundled"] }
regex = "1.12.2"
